--- a/views/post.ejs
+++ b/views/post.ejs
@@ -5,6 +5,10 @@
     <h1><%=title%></h1>
     <p><%=content%></p>
 
+<form action="/delete" method="POST">
+    <button type="submit" name="delete" value="<%= title%>">Delete it!</button>  
+    <input type="hidden" name="titleName" value="<%= title %>"></input>
+</form>
 
 
 <%- include("partials/footer"); -%>
